fixed font sizes on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -52,19 +52,18 @@
 }
 
 #about {
-  margin-left: -24px;
-  font-size: 100px;
+  margin-left: 10px;
+  font-size: 48px;
 }
 
 #projects {
-  margin-left: -2px;
-  font-size: 100px;
+  margin-left: 10px;
+  font-size: 48px;
 }
 
 #contact {
-  margin-left: -20px;
-  font-size: 95px;
-  letter-spacing: -2px;
+  margin-left: 10px;
+  font-size: 48px;
 }
 
 .hero-heading {
